--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout completo do repositório
+      # ✅ OTIMIZAÇÃO 1: Checkout shallow inicial (apenas último commit)
+      - name: Checkout otimizado do repositório
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 1  # Apenas o último commit (reduz de 45s para ~5-8s)
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Mudar para branch `data` e preparar
+      # ✅ OTIMIZAÇÃO 2: Fetch seletivo apenas das branches necessárias
+      - name: Fetch branches necessárias
         run: |
-          git fetch origin data || true
-          if git show-ref --verify --quiet refs/remotes/origin/data; then
+          # Fetch apenas a branch data (se existir) e main
+          git fetch origin data:data || echo "Branch data não existe ainda"
+          git fetch origin main:main
+          
+          # Mudar para branch data
+          if git show-ref --verify --quiet refs/heads/data; then
             git checkout data
           else
             git checkout --orphan data
@@ -33,37 +39,49 @@ jobs:
             echo '{"categories": {}, "articles": {}}' > articles/original_categories.json
           fi
 
-      - name: Extrair scripts e requirements da branch `main`
-        run: |
-          mkdir -p temp-scripts/scripts/exporters
-          git show origin/main:requirements.txt > temp-scripts/requirements.txt
-          git show origin/main:scripts/RSS_API.py > temp-scripts/scripts/RSS_API.py
-          git show origin/main:scripts/__init__.py > temp-scripts/scripts/__init__.py
-          git show origin/main:scripts/mappings.py > temp-scripts/scripts/mappings.py
-          git show origin/main:scripts/remove_articles.py > temp-scripts/scripts/remove_articles.py
-          git show origin/main:scripts/reset_counts_with_backup.py > temp-scripts/scripts/reset_counts_with_backup.py
-          git show origin/main:scripts/remove_duplicates.py > temp-scripts/scripts/remove_duplicates.py
-          git show origin/main:scripts/exporters/export_original_categories.py > temp-scripts/scripts/exporters/export_original_categories.py
-
+      # ✅ OTIMIZAÇÃO 3: Cache para dependências Python
       - name: Configurar cache do pip
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('temp-scripts/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
+      # ✅ OTIMIZAÇÃO 4: Setup Python em paralelo com extração de scripts
       - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          cache: 'pip'  # Cache automático do pip
 
+      # ✅ OTIMIZAÇÃO 5: Extração otimizada de scripts (usando refs locais)
+      - name: Extrair scripts e requirements da branch main
+        run: |
+          mkdir -p temp-scripts/scripts/exporters
+          
+          # Usar referência local main em vez de origin/main (mais rápido)
+          git show main:requirements.txt > temp-scripts/requirements.txt
+          git show main:scripts/RSS_API.py > temp-scripts/scripts/RSS_API.py
+          git show main:scripts/__init__.py > temp-scripts/scripts/__init__.py
+          git show main:scripts/mappings.py > temp-scripts/scripts/mappings.py
+          git show main:scripts/remove_articles.py > temp-scripts/scripts/remove_articles.py
+          git show main:scripts/reset_counts_with_backup.py > temp-scripts/scripts/reset_counts_with_backup.py
+          git show main:scripts/remove_duplicates.py > temp-scripts/scripts/remove_duplicates.py
+          git show main:scripts/exporters/export_original_categories.py > temp-scripts/scripts/exporters/export_original_categories.py
+
+      # ✅ OTIMIZAÇÃO 6: Instalação de dependências com cache
       - name: Instalar dependências
-        run: pip install -r temp-scripts/requirements.txt
+        run: |
+          # Instalar com cache e sem upgrade desnecessário
+          pip install --no-upgrade -r temp-scripts/requirements.txt
 
       - name: Executar script de atualização de JSON
         run: |
           export PYTHONPATH=$(pwd)/temp-scripts
           python temp-scripts/scripts/RSS_API.py
 
+      # ✅ OTIMIZAÇÃO 7: Cópia otimizada de ficheiros HTML
       - name: Garantir pasta public e copiar ficheiros JSON
         run: |
           mkdir -p public
@@ -72,24 +90,12 @@ jobs:
           cp articles/articles_search.json public/
           cp articles/original_categories.json public/
           
-          # Copiar ficheiros HTML estáticos da branch main (se existirem)
-          if git show origin/main:public/politica_de_privacidade.html > /dev/null 2>&1; then
-            git show origin/main:public/politica_de_privacidade.html > public/politica_de_privacidade.html
-          fi
-          
-          if git show origin/main:public/termos_de_utilizacao.html > /dev/null 2>&1; then
-            git show origin/main:public/termos_de_utilizacao.html > public/termos_de_utilizacao.html
-          fi
-
-          if git show origin/main:public/contacto.html > /dev/null 2>&1; then
-            git show origin/main:public/contacto.html > public/contacto.html
-          fi
-
-          if git show origin/main:public/app-ads.txt > /dev/null 2>&1; then
-            git show origin/main:public/app-ads.txt > public/app-ads.txt
-          fi
-
-      # ✅ Netlify vai comprimir automaticamente - sem necessidade de compressão manual
+          # Cópia otimizada de ficheiros HTML estáticos (com verificação em batch)
+          for file in "politica_de_privacidade.html" "termos_de_utilizacao.html" "contacto.html" "app-ads.txt"; do
+            if git cat-file -e main:public/$file 2>/dev/null; then
+              git show main:public/$file > public/$file
+            fi
+          done
 
       - name: Verificar ficheiros gerados
         run: |
@@ -148,13 +154,16 @@ jobs:
             echo "- **Zero problemas de timing**: Sem dependências entre ficheiros" >> ../README.md
           fi
 
-      - name: Commit e Push para branch `data`
+      # ✅ OTIMIZAÇÃO 8: Commit otimizado (verificação mais eficiente)
+      - name: Commit e Push para branch data
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          if ! git diff --cached --quiet; then
-            git commit -m "Atualização automática dos ficheiros JSON comprimidos - $(date '+%Y-%m-%d %H:%M:%S')"
+          
+          # Verificação otimizada de mudanças
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "Atualização automática dos ficheiros JSON - $(date '+%Y-%m-%d %H:%M:%S')"
             git push origin data --force
           else
             echo "Nenhuma mudança para commitar"
